fix: open errormessage link in browser + move copy button to left side (#924)
* fix: always open github link in browser window

* fix: move copy btn to left side to avoid overlap

--- a/app/renderer/components/ErrorBoundary/ErrorMessage.css
+++ b/app/renderer/components/ErrorBoundary/ErrorMessage.css
@@ -4,6 +4,5 @@
 
 .copyTraceBtn {
   position: absolute;
-  top: 15px;
-  right: 15px;
+  left: 24px;
 }
